Archive2/7b/71ff0a5a714fdf/output
main.cpp:6:10: error: too few template arguments for class template 'array'
    std::array<char> letters {'o', 'm', 'g', 'w', 't', 'f'};
         ^
/usr/include/c++/v1/array:121:25: note: template is declared here
struct _LIBCPP_TYPE_VIS array
                        ^
1 error generated.
